Try to fix map view on mobile a bit

--- a/open-source-election-game/src/game/views/MapView.css
+++ b/open-source-election-game/src/game/views/MapView.css
@@ -15,6 +15,15 @@
         width: 96%!important;
         padding: 10px!important;
     }
+
+    .Map {
+        transform: scale(0.4);
+        width: 225%!important;
+        background-color: #c1ecf5;
+        border-style: double;
+        border-color: black;
+    }
+    
 }
 
 .Map {
